--- a/ros2_graph/web/static/index.html
+++ b/ros2_graph/web/static/index.html
@@ -66,14 +66,16 @@
             </label>
           </fieldset>
           <section id="customThemeSection" class="settings-form__custom" hidden>
-            <p class="settings-form__note">Adjust the palette to build a custom theme. Changes apply instantly while custom mode is active.</p>
-            <div class="settings-form__field">
-              <label for="customThemeScheme">Base variant</label>
-              <select id="customThemeScheme">
-                <option value="dark">Dark</option>
-                <option value="light">Light</option>
-              </select>
-            </div>
+          <p class="settings-form__note">Adjust the palette to build a custom theme. Changes apply instantly while custom mode is active.</p>
+          <div class="settings-form__field">
+            <label for="customThemeScheme">Base variant</label>
+            <select id="customThemeScheme">
+              <option value="dark">Dark</option>
+              <option value="light">Light</option>
+            </select>
+          </div>
+          <div class="settings-form__group">
+            <h3 class="settings-form__group-title">Interface</h3>
             <div class="settings-form__colors">
               <label class="settings-form__color" for="customBg">
                 <span>Background</span>
@@ -92,14 +94,66 @@
                 <input type="color" id="customAccent" name="customAccent" value="#3fb950">
               </label>
               <label class="settings-form__color" for="customAccentSecondary">
-                <span>Accent&nbsp;Secondary</span>
+                <span>Accent Secondary</span>
                 <input type="color" id="customAccentSecondary" name="customAccentSecondary" value="#58a6ff">
               </label>
             </div>
-            <div class="settings-form__actions">
-              <button type="button" id="customThemeReset" class="secondary">Reset custom theme</button>
+          </div>
+          <div class="settings-form__group">
+            <h3 class="settings-form__group-title">Graph Edges</h3>
+            <div class="settings-form__colors">
+              <label class="settings-form__color" for="customGraphEdge">
+                <span>Base</span>
+                <input type="color" id="customGraphEdge" name="customGraphEdge" value="#3a4b5e">
+              </label>
+              <label class="settings-form__color" for="customGraphEdgeHover">
+                <span>Hover</span>
+                <input type="color" id="customGraphEdgeHover" name="customGraphEdgeHover" value="#5cb2ff">
+              </label>
+              <label class="settings-form__color" for="customGraphEdgeSelect">
+                <span>Select</span>
+                <input type="color" id="customGraphEdgeSelect" name="customGraphEdgeSelect" value="#ffab3d">
+              </label>
             </div>
-          </section>
+          </div>
+          <div class="settings-form__group">
+            <h3 class="settings-form__group-title">Graph Nodes</h3>
+            <div class="settings-form__colors">
+              <label class="settings-form__color" for="customGraphNodeFill">
+                <span>Base Fill</span>
+                <input type="color" id="customGraphNodeFill" name="customGraphNodeFill" value="#2b4a65">
+              </label>
+              <label class="settings-form__color" for="customGraphNodeHover">
+                <span>Hover Fill</span>
+                <input type="color" id="customGraphNodeHover" name="customGraphNodeHover" value="#3f6d90">
+              </label>
+              <label class="settings-form__color" for="customGraphNodeSelect">
+                <span>Select Fill</span>
+                <input type="color" id="customGraphNodeSelect" name="customGraphNodeSelect" value="#4b7da1">
+              </label>
+            </div>
+          </div>
+          <div class="settings-form__group">
+            <h3 class="settings-form__group-title">Graph Topics</h3>
+            <div class="settings-form__colors">
+              <label class="settings-form__color" for="customGraphTopicFill">
+                <span>Base Fill</span>
+                <input type="color" id="customGraphTopicFill" name="customGraphTopicFill" value="#14202c">
+              </label>
+              <label class="settings-form__color" for="customGraphTopicHover">
+                <span>Hover Fill</span>
+                <input type="color" id="customGraphTopicHover" name="customGraphTopicHover" value="#162331">
+              </label>
+              <label class="settings-form__color" for="customGraphTopicSelect">
+                <span>Select Fill</span>
+                <input type="color" id="customGraphTopicSelect" name="customGraphTopicSelect" value="#1f2e41">
+              </label>
+            </div>
+          </div>
+          <div class="settings-form__actions">
+            <button type="button" id="customThemeReset" class="secondary">Reset custom theme</button>
+          </div>
+        </section>
         </form>
       </div>
     </div>
